@@ -1,9 +1,7 @@
 package com.tfg.tfg.controller;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -22,13 +20,16 @@ import com.tfg.tfg.repository.SummonerRepository;
 @RequestMapping("/api/v1/summoners")
 public class SummonerController {
 
-    @Autowired
-    private SummonerRepository summonerRepository;
+    private final SummonerRepository summonerRepository;
+
+    public SummonerController(SummonerRepository summonerRepository) {
+        this.summonerRepository = summonerRepository;
+    }
 
     @GetMapping
     public ResponseEntity<List<SummonerDTO>> getAllSummoners() {
         List<Summoner> summoners = summonerRepository.findAll();
-        List<SummonerDTO> dtos = summoners.stream().map(this::mapSummoner).collect(Collectors.toList());
+        List<SummonerDTO> dtos = summoners.stream().map(this::mapSummoner).toList();
         return ResponseEntity.ok(dtos);
     }
 
@@ -48,7 +49,7 @@ public class SummonerController {
     @GetMapping("/{id}/matches")
     public ResponseEntity<List<MatchDTO>> getMatches(@PathVariable Long id) {
         return summonerRepository.findById(id).map(s -> {
-            List<MatchDTO> list = s.getMatches().stream().map(this::mapMatch).collect(Collectors.toList());
+            List<MatchDTO> list = s.getMatches().stream().map(this::mapMatch).toList();
             return ResponseEntity.ok(list);
         }).orElseGet(() -> ResponseEntity.notFound().build());
     }
@@ -56,45 +57,45 @@ public class SummonerController {
     @GetMapping("/{id}/champion-stats")
     public ResponseEntity<List<ChampionStatDTO>> getChampionStats(@PathVariable Long id) {
         return summonerRepository.findById(id).map(s -> {
-            List<ChampionStatDTO> list = s.getChampionStats().stream().map(this::mapChampionStat).collect(Collectors.toList());
+            List<ChampionStatDTO> list = s.getChampionStats().stream().map(this::mapChampionStat).toList();
             return ResponseEntity.ok(list);
         }).orElseGet(() -> ResponseEntity.notFound().build());
     }
 
     private SummonerDTO mapSummoner(Summoner s) {
         SummonerDTO dto = new SummonerDTO();
-        dto.id = s.getId();
-        dto.riotId = s.getRiotId();
-        dto.name = s.getName();
-        dto.level = s.getLevel();
-        dto.profileIconId = s.getProfileIconId();
-        dto.tier = s.getTier();
-        dto.rank = s.getRank();
-        dto.lp = s.getLp();
+        dto.setId(s.getId());
+        dto.setRiotId(s.getRiotId());
+        dto.setName(s.getName());
+        dto.setLevel(s.getLevel());
+        dto.setProfileIconId(s.getProfileIconId());
+        dto.setTier(s.getTier());
+        dto.setRank(s.getRank());
+        dto.setLp(s.getLp());
         return dto;
     }
 
     private MatchDTO mapMatch(MatchEntity m) {
         MatchDTO dto = new MatchDTO();
-        dto.id = m.getId();
-        dto.matchId = m.getMatchId();
-        dto.timestamp = m.getTimestamp();
-        dto.win = m.isWin();
-        dto.kills = m.getKills();
-        dto.deaths = m.getDeaths();
-        dto.assists = m.getAssists();
+        dto.setId(m.getId());
+        dto.setMatchId(m.getMatchId());
+        dto.setTimestamp(m.getTimestamp());
+        dto.setWin(m.isWin());
+        dto.setKills(m.getKills());
+        dto.setDeaths(m.getDeaths());
+        dto.setAssists(m.getAssists());
         return dto;
     }
 
     private ChampionStatDTO mapChampionStat(ChampionStat c) {
         ChampionStatDTO dto = new ChampionStatDTO();
-        dto.id = c.getId();
-        dto.championId = c.getChampionId();
-        dto.gamesPlayed = c.getGamesPlayed();
-        dto.wins = c.getWins();
-        dto.kills = c.getKills();
-        dto.deaths = c.getDeaths();
-        dto.assists = c.getAssists();
+        dto.setId(c.getId());
+        dto.setChampionId(c.getChampionId());
+        dto.setGamesPlayed(c.getGamesPlayed());
+        dto.setWins(c.getWins());
+        dto.setKills(c.getKills());
+        dto.setDeaths(c.getDeaths());
+        dto.setAssists(c.getAssists());
         return dto;
     }
 }
